--- a/index.html
+++ b/index.html
@@ -4,69 +4,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A Record Creator</title>
   <meta name="description" content="A simple web application for creating DNS A records with hostname, IP address, and TTL.">
   <meta name="keywords" content="DNS, A Record, IP Address, TTL, Hostname, Web Tool">
-  <meta name="author" content="Dustin Moore">
+  <meta name="author" content="Dustin Moore, Mike Moore">
+  <meta name="creator" content="Dustin Moore | https://www.dustinmoore.dev">
+  <meta name="collaborator" content="Mike Moore | https://www.linkedin.com/in/mike-e-moore/">
+  <meta name="repository" content="https://www.github.com/dustinmmoore">
+  <link rel="manifest" href="./manifest.json">
+  <link rel="icon" type="image/png" href="./assets/favicon.png">
+  <link rel="apple-touch-icon" href="./assets/icon-192.png">
+  <meta name="theme-color" content="#2c3e50">
+  <title>A Record Creator</title>
   <link rel="stylesheet" href="./assets/styles.css">
+  <script defer src="./assets/script.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1>A Record Creator</h1>
-    <label for="hostname">Hostname:</label>
-    <input type="text" id="hostname" placeholder="e.g., example.com">
+    <h1 class="title">A Record Creator</h1>
+    <div id="errorBoundary" class="error-message" role="alert" aria-live="polite"></div>
+    <div class="form-group" role="form" aria-label="DNS Record Form">
+      <label for="hostname">Hostname:</label>
+      <input type="text" id="hostname" class="input-field" placeholder="e.g., example.com">
 
-    <label for="ipAddress">IP Address:</label>
-    <input type="text" id="ipAddress" placeholder="e.g., 192.168.1.1" pattern="^((25[0-5]|2[0-4][0-9]|[0-1]?[0-9][0-9]?)\.){3}(25[0-5]|2[0-4][0-9]|[0-1]?[0-9][0-9]?)$" title="Please enter a valid IP address">
+      <label for="ipAddress">IP Address:</label>
+      <input type="text" id="ipAddress" class="input-field" placeholder="e.g., 192.168.1.1" pattern="^((25[0-5]|2[0-4][0-9]|[0-1]?[0-9][0-9]?)\.){3}(25[0-5]|2[0-4][0-9]|[0-1]?[0-9][0-9]?)$" title="Please enter a valid IP address">
 
-    <label for="ttl">TTL (Default: 3600 seconds):</label>
-    <input type="text" id="ttl" placeholder="3600" value="3600">
+      <label for="ttl">TTL (Default: 3600 seconds):</label>
+      <input type="text" id="ttl" class="input-field" placeholder="3600" value="3600">
 
-    <button onclick="addRecord()">Add A Record</button>
+      <button class="btn-primary" onclick="addRecord()" id="submitButton" aria-label="Add DNS Record">
+        <span class="button-text">Add A Record</span>
+        <span class="loading-spinner" hidden></span>
+      </button>
+    </div>
 
-    <h2>A Records</h2>
-    <table id="recordsTable">
-      <thead>
-        <tr>
-          <th>Hostname</th>
-          <th>IP Address</th>
-          <th>TTL</th>
-        </tr>
-      </thead>
-      <tbody id="recordsBody"></tbody>
-    </table>
+    <h2 class="subtitle">A Records</h2>
+    <div class="table-container">
+      <table id="recordsTable" class="records-table">
+        <thead>
+          <tr>
+            <th>Hostname</th>
+            <th>IP Address</th>
+            <th>TTL</th>
+          </tr>
+        </thead>
+        <tbody id="recordsBody"></tbody>
+      </table>
+    </div>
+    <div id="loadingState" class="loading-state" hidden>Loading records...</div>
   </div>
-
-  <script>
-    function addRecord() {
-      const hostname = document.getElementById('hostname').value.trim();
-      const ipAddress = document.getElementById('ipAddress').value.trim();
-      const ttl = document.getElementById('ttl').value.trim();
-
-      const ipPattern = /^((25[0-5]|2[0-4][0-9]|[0-1]?[0-9][0-9]?)\.){3}(25[0-5]|2[0-4][0-9]|[0-1]?[0-9][0-9]?)$/;
-
-      if (!hostname || !ipAddress || !ttl) {
-        alert('Please fill in all fields.');
-        return;
-      }
-      if (!ipPattern.test(ipAddress)) {
-        alert('Please enter a valid IP address.');
-        return;
-      }
-
-      const recordsBody = document.getElementById('recordsBody');
-      const newRow = recordsBody.insertRow();
-
-      newRow.insertCell(0).textContent = hostname;
-      newRow.insertCell(1).textContent = ipAddress;
-      newRow.insertCell(2).textContent = ttl;
-
-      // Clear input fields
-      document.getElementById('hostname').value = '';
-      document.getElementById('ipAddress').value = '';
-      document.getElementById('ttl').value = '3600';
-    }
-  </script>
 </body>
 </html>
 
