--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Created by Dustin Moore | https://www.dustinmoore.dev | https://www.github.com/dustinmmoore | Collaborated with Mike Moore | https://www.linkedin.com/in/mike-e-moore/ -->
+<!-- Created by Dustin Moore | https://www.dustinmoore.dev | https://www.github.com/dustinmmoore | https://www.linkedin.com/in/dustinmmoore | Collaborated with Mike Moore | https://www.linkedin.com/in/mike-e-moore/ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
