--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <label for="subnet">Subnet (optional):</label>
                 <input type="text" id="subnet" placeholder="255.255.255.0">
             </div>
-            <button type="submit">Add A Record</button>
+            <button type="submit">Add Record</button>
         </form>
 
         <div class="table-container">
