removed emoji for a more professional look

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </main>
 
     <footer>
-        <p>Created with ❤️ by Dustin Moore</p>
+        <p>Created by Dustin Moore</p>
         <div class="footer-links">
             <button class="footer-button" onclick="window.open('https://www.linkedin.com/in/dustinmmoore', '_blank')">LinkedIn</button>
             <button class="footer-button" onclick="window.open('https://github.com/dustinmmoore', '_blank')">GitHub</button>
