--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1>DNS A Record Creator</h1>
+        <h1>ARC</h1>
         <p>Simplify your DNS management</p>
     </header>
 
