--- a/index.html
+++ b/index.html
@@ -52,17 +52,21 @@
                 <label for="hostname">Hostname:</label>
                 <input type="text" id="hostname" required placeholder="subdomain.example.com">
             </div>
-            <div class="form-group">
+            <div class="form-group" id="ipAddressGroup">
                 <label for="ipAddress">IP Address:</label>
                 <input type="text" id="ipAddress" required placeholder="192.168.1.1">
+            </div>
+            <div class="form-group" id="aliasGroup" style="display: none;">
+                <label for="alias">Alias:</label>
+                <input type="text" id="alias" placeholder="alias.example.com">
+            </div>
+            <div class="form-group" id="canonicalGroup" style="display: none;">
+                <label for="canonical">Canonical Name:</label>
+                <input type="text" id="canonical" placeholder="target.example.com">
             </div>
             <div class="form-group">
                 <label for="ttl">TTL (seconds):</label>
                 <input type="number" id="ttl" value="3600" required>
-            </div>
-            <div class="form-group">
-                <label for="subnet">Subnet (optional):</label>
-                <input type="text" id="subnet" placeholder="255.255.255.0">
             </div>
             <button type="submit">Add Record</button>
         </form>
