--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="DNS A Record Creator Tool by Dustin Moore - Full Stack Developer specializing in JavaScript, React, and Node.js. Portfolio: https://www.dustinmoore.dev">
     <meta name="keywords" content="DNS tools, A Record Creator, Dustin Moore, Web Developer, JavaScript Developer, Full Stack Engineer">
     <meta name="author" content="Dustin Moore">
-    <title>A Record Creator | Dustin Moore - Full Stack Developer</title>
+    <title>ARC | Dustin Moore</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <link rel="manifest" href="./manifest.json">
