--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             navigator.serviceWorker.register('./sw.js');
         }
     </script>
+    <script src="https://vibixel-standalone-chat.vercel.app/chat-widget.js"></script>
 </body>
 </html>
 
