--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
             navigator.serviceWorker.register('./sw.js');
         }
     </script>
+    <!-- Vibixel Chat Widget -->
+    <script src="https://vibixel-standalone-chat.vercel.app/chat-widget.js" defer></script>
 </body>
 </html>
 
