--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         }
     </script>
     <!-- Vibixel Chat Widget -->
-    <script src="https://vibixel-standalone-chat.vercel.app/chat-widget.js" defer></script>
+    <script src="https://vibixel-standalone-chat.vercel.app/chat-widget.js"></script>
 </body>
 </html>
 
