--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1>ARC</h1>
-        <p>Simplify your DNS management</p>
+        <p>Simplify DNS management</p>
     </header>
 
     <main>
